@@ -7,7 +7,7 @@
 	box-shadow:inset 0px 1px 0px 0px #fff6af;
 	background:linear-gradient(to bottom, #ffec64 5%, #ffab23 100%);
 	background-color:#ffec64;
-	border-radius:6px;
+	//border-radius:6px;
 	border:1px solid #ffaa22;
 	display:inline-block;
 	cursor:pointer;
