@@ -4,4 +4,5 @@
 19/10/2016 - 0.0.4: Component logic cleaned up.
 20/10/2016 - 0.0.5: Translation 0-999 OK.
 20/10/2016 - 0.0.6: Added sketch for "in between labels" (e.g: "one THOUSAND AND three"). See "addThousands".
-20/10/2016 - 0.0.7: 
+20/10/2016 - 0.0.7: Translation OK!
+20/10/2016 - 0.0.8: Cleaned up, fixed last minute bugs
